rectified seat adding feature in screen