@@ -1,12 +1,11 @@
 package com.backendlld.bookmyshowjan.security;
-
 import com.backendlld.bookmyshowjan.models.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -16,16 +15,15 @@ public class CustomUserDetails implements UserDetails {
         this.user = user;
     }
 
-    // Add this getter to access user ID in controllers
     public Integer getId() {
         return user.getId();
     }
 
+    // >>> Implement this here <<<
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(
-                new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
-        );
+        return List.of(new SimpleGrantedAuthority(user.getRole().name()));
+        // e.g. "ADMIN", "THEATER_OWNER"
     }
 
     @Override
@@ -39,22 +37,14 @@ public class CustomUserDetails implements UserDetails {
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
+    public boolean isAccountNonExpired() { return true; }
 
     @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
+    public boolean isAccountNonLocked() { return true; }
 
     @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
+    public boolean isCredentialsNonExpired() { return true; }
 
     @Override
-    public boolean isEnabled() {
-        return true;
-    }
+    public boolean isEnabled() { return true; }
 }
